added in some accessibility fixes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+  <div id="skip">
+    <a href="#content">Skip to main content</a>
+  </div>
+
   <header class="header">
     <div class="container">
 
@@ -29,11 +33,11 @@
           <a href="#" class="nav-trigger nav-trigger--close"><img src="./images/icon-close.svg" alt="Open Menu"></a>
 
           <ul class="menu">
-            <li class="menu__item"><a href="" class="menu__link">About</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Careers</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Events</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Products</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Support</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">About</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Careers</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Events</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Products</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Support</a></li>
           </ul>
         </nav>
         
@@ -43,7 +47,7 @@
   </header>
 
   <section class="hero">
-
+    <div class="overlay"></div>
     <div class="container">
 
       <div class="box-text">
@@ -54,7 +58,7 @@
     
   </section>
   
-  <main class="main-content">
+  <main id="content" class="main-content">
 
     <div class="container">
 
@@ -77,40 +81,39 @@
         </div>
 
         <div class="flex cards">
-          <div class="card card--1">
+          <div class="card card--1" tabindex="0" aria-label="Deep earth Creation">
             <span class="card__text">Deep<br> earth</span>
             <span class="overlay"></span>
           </div>
-          <div class="card card--2">
+          <div class="card card--2"  tabindex="0" aria-label="Night Arcade Creation">
             <span class="card__text"> Night<br> arcade</span>
             <span class="overlay"></span>
           </div>
-          <div class="card card--3">
+          <div class="card card--3"  tabindex="0" aria-label="Soccer team VR Creation">
             <span class="card__text">Soccer <br>team VR</span>
             <span class="overlay"></span>
           </div>
-          <div class="card card--4">
+          <div class="card card--4"  tabindex="0" aria-label="The Grid Creation">
             <span class="card__text"> The <br>grid</span>
             <span class="overlay"></span>
           </div>
-          <div class="card card--5">
+          <div class="card card--5"  tabindex="0" aria-label="From Up Above Creation">
             <span class="card__text">From up<br> above VR</span>
             <span class="overlay"></span>
           </div>
-          <div class="card card--6">
+          <div class="card card--6"  tabindex="0" aria-label="Pocket Borealis Creation">
             <span class="card__text">Pocket<br> borealis</span>
             <span class="overlay"></span>
           </div>
-          <div class="card card--7">
+          <div class="card card--7"  tabindex="0" aria-label="The Curiosity Creation">
             <span class="card__text">The <br>curiosity</span>
             <span class="overlay"></span>
           </div>
-          <div class="card card--8">
+          <div class="card card--8"  tabindex="0" aria-label="Make it Fisheye Creation">
             <span class="card__text">Make it <br>fisheye</span>
             <span class="overlay"></span>
           </div>
         </div>
-
 
       </section>
     </div>
@@ -124,21 +127,21 @@
           <div class="footer__logo"><img src="./images/logo.svg" alt="Loop Studios"></div>
           <nav class="footer-nav">
             <ul class="menu">
-              <li class="menu__item"><a href="" class="menu__link">About</a></li>
-              <li class="menu__item"><a href="" class="menu__link">Careers</a></li>
-              <li class="menu__item"><a href="" class="menu__link">Events</a></li>
-              <li class="menu__item"><a href="" class="menu__link">Products</a></li>
-              <li class="menu__item"><a href="" class="menu__link">Support</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">About</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Careers</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Events</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Products</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Support</a></li>
             </ul>
           </nav>
         </div>
         <div class="footer__social">
           <nav class="social-nav">
             <ul class="menu">
-              <li class="social"><a href="" class="social-icon"><img src="./images/icon-facebook.svg" alt="Facebook"></a></li>
-              <li class="social"><a href="" class="social-icon"><img src="./images/icon-twitter.svg" alt="Twitter"></a></li>
-              <li class="social"><a href="" class="social-icon"><img src="./images/icon-pinterest.svg" alt="Pinterest"></a></li>
-              <li class="social"><a href="" class="social-icon"><img src="./images/icon-instagram.svg" alt="Instagram"></a></li>
+              <li class="social"><a href="#" class="social-icon"><img src="./images/icon-facebook.svg" alt="Facebook"></a></li>
+              <li class="social"><a href="#" class="social-icon"><img src="./images/icon-twitter.svg" alt="Twitter"></a></li>
+              <li class="social"><a href="#" class="social-icon"><img src="./images/icon-pinterest.svg" alt="Pinterest"></a></li>
+              <li class="social"><a href="#" class="social-icon"><img src="./images/icon-instagram.svg" alt="Instagram"></a></li>
             </ul>
           </nav>
           <div class="copyright">© 2021 Loopstudios. All rights reserved.</div>
